# wikistream

./: .dockerignore  .example.env  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  justfile  stats.sh  stream.sh
.github/: README.md
configuration/docker/: Dockerfile  app.Dockerfile  db.compose.yaml
docs/rfcs/: 01-Resume-without-duplicates.md  02-Data-reduction.md
scripts/: build.sh  check.sh  duckdb.sh  json-to-parquet.sh  pjq.sh  process-one-raw.sh  process-raw.sh  sample.sh  stats.sh  view.sh  zstd-jq.sh
src/ws-app/: Cargo.toml
src/ws-app/assets/: style.css
src/ws-app/migrations/: 1_categorize_events.sql  202605010102_remove_unused_data.sql  2_edit_events.sql  3_log_events.sql  4_new_events.sql  5_add_daily_enwiki_index.sql
src/ws-app/src/: lib.rs
src/ws-app/src/db/: categorize.rs  edit.rs  log.rs  mod.rs  new.rs
src/ws-app/src/http/: mod.rs  responses.rs  server.rs
src/ws-app/src/http/handlers/: health.rs  index.rs  ingest.rs  mod.rs
src/ws-app/src/views/: mod.rs
src/ws-app/src/views/templates/: index.html
src/ws-app/templates/: base.html  index.html
src/ws-models/: Cargo.toml
src/ws-models/src/: categorize.rs  edit.rs  lib.rs  log.rs  new.rs
src/ws-models/src/log/: abusefilter.rs  block.rs  communityrequests.rs  contentmodel.rs  delete.rs  gblblock.rs  gblrename.rs  gblrights.rs  globalauth.rs  growthexperiments.rs  import.rs  massmessage.rs  merge.rs  mod.rs  move_log.rs  newusers.rs  notifytranslators.rs  pagetranslation.rs  pagetriage_copyvio.rs  pagetriage_curation.rs  patrol.rs  protect.rs  renameuser.rs  review.rs  rights.rs  stable.rs  tag.rs  thanks.rs  translationreview.rs  upload.rs
src/ws-sse/: Cargo.toml
src/ws-sse-cli/: Cargo.toml
src/ws-sse-cli/src/: ingest.rs  ingest_state.rs  main.rs
src/ws-sse-cli/src/eventfile/: mod.rs  writer.rs
src/ws-sse/src/: event.rs  lib.rs
